# sns-to-rabbitmq

./: .dockerignore  .gitignore  Dockerfile-test  Makefile  README.md  http-to-rabbitmq.cabal  sqs-to-rabbitmq.cabal  stack.yaml
docker/: Dockerfile  Dockerfile-compile  Dockerfile-dependencies
docker/strip-docker-image/: CREDIT.md  strip-docker-image  strip-docker-image-export
http-to-rabbitmq/: LICENSE  http-to-rabbitmq.cabal
http-to-rabbitmq-dependencies/: http-to-rabbitmq-dependencies.cabal
http-to-rabbitmq/src/: Configuration.hs  Main.hs
src/: Configuration.hs  Main.hs
