name:                sqs-to-rabbitmq
version:             0.1.0.0
synopsis:            Pump data from SQS to RabbitMQ
description:         Send messages from Elastic Beanstalk Worker Environment SQS Daemon to RabbitMQ.
homepage:            https://git.xogrp.com/scollins/sqs-to-rabbitmq#readme
author:              Steven Collins
maintainer:          local-devops.group@xogrp.com
copyright:           2016 XO Group Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sqs-to-rabbitmq
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , warp >= 3.2 && < 4
                     , amqp >= 0.14 && < 1
                     , conduit-combinators >= 1.0 && < 2
                     , wai
                     , wai-conduit
                     , http-types
