name:                http-to-rabbitmq-dependencies
version:             0.1.0.0
synopsis:            Dependencies Stub
description:         Stub containing http-to-rabbitmq dependencies (to speed up Docker builds)
homepage:            https://git.xogrp.com/scollins/http-to-rabbitmq#readme
author:              Steven Collins
maintainer:          local-devops.group@xogrp.com
copyright:           2016 XO Group Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  build-depends:       amqp >= 0.14 && < 1
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , http-types
                     , resource-pool
                     , text
                     , unix
                     , wai
                     , wai-extra
                     , warp >= 3.2 && < 4
                     , http-client-tls
                     , aeson
                     , containers
